avoid width collapse of left side bar

--- a/angular/src/app/term/term.component.less
+++ b/angular/src/app/term/term.component.less
@@ -5,6 +5,7 @@
   height: 100%;
   &>.toc{
     width: @side-bar-width;
+    min-width: @side-bar-width;
     display: flex;
     flex-direction: column;
     overflow: auto;
